# fastapi_project

./: alembic.ini  pyproject.toml
config_dist/: config.yml
local-storage/files/: similarweb.csv
src/api/: __init__.py  __main__.py  main_factory.py
src/api/config/models/: auth.py  main.py
src/api/config/parser/: auth.py  main.py
src/api/dependencies/: __init__.py  auth.py  db.py  file.py
src/api/models/: auth.py
src/api/routes/: __init__.py  file_operation.py  user.py
src/common/: __init__.py  factory.py
src/common/config/: __init__.py
src/common/config/models/: __init__.py  main.py  paths.py
src/common/config/parser/: config_file_reader.py  main.py  paths.py
src/core/interfaces/dal/: base.py  user.py
src/core/models/dto/: user.py
src/core/services/: file_operation.py  user.py
src/core/utils/: datetime_utils.py  exceptions.py
src/infrastructure/db/: factory.py
src/infrastructure/db/config/models/: db.py
src/infrastructure/db/config/parser/: db.py
src/infrastructure/db/dao/: __init__.py  holder.py
src/infrastructure/db/dao/rdb/: __init__.py  base.py  user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 20230925-205839_94e58320122d_create_table_user.py
src/infrastructure/db/models/: base.py  user.py
tests/: conftest.py
tests/config_dist/: config.yml
tests/fixtures/: conftest.py  user_constant.py
tests/fixtures/resources/: brands.csv
tests/integration/: conftest.py
tests/integration/api/: conftest.py  test_file_operation.py  test_user.py
tests/mocks/: config.py
